--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
+        "darkaonline/l5-swagger": "^8.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
